[package]
name = "knr_bridge_app"
version = "0.1.0"
edition = "2021"
description = "Bridge app voor Opentrons robots"
authors = ["Koen Marijt"]
license = "MIT"

[dependencies]
tauri = { version = "1.8.3", features = [ "dialog-save", "dialog-open", "path-all", "http-all", "shell-open", "fs-all", "system-tray"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time", "fs"] }
reqwest = { version = "0.11.27", features = ["json", "multipart", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
anyhow = "1.0"
rfd = "0.14"
once_cell = "1.19"

[build-dependencies]
tauri-build = { version = "1.5.6", features = [] }

[[bin]]
name = "knr_bridge_app"
path = "main.rs"

[features]
default = []
custom-protocol = []
